# ryoma

./: .env.template  .gitignore  Makefile  README.md  README_zh.md  env.yml  pyproject.toml
.github/workflows/: codeql.yml
ryoma/: app.py  main.py
ryoma/api/: main.py
ryoma/api/v1/: __init__.py  chat.py  health.py  html_reader.py
ryoma/cli/: cli.py
ryoma/cmd/: __init__.py  cli.py
ryoma/core/: config.py  logging.py
ryoma/core/embedding/: __init__.py  base.py
ryoma/core/embedding/backend/: fasttext.py
ryoma/core/llm/: __init__.py  base.py
ryoma/core/llm/backend/: aws_bedrock.py  azure_openai.py  google_gemini.py  openai.py  zhipu.py
ryoma/core/storage/vector/: __init__.py  base.py
ryoma/core/storage/vector/backend/: milvus.py
ryoma/core/tool/: html.py
ryoma/core/workflow/html_reader/: __init__.py
